--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="links">
-            About  |  Portfolio  |  Contact</div>
+                <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/index.html">About</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/portfolio.html">Portfolio</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/contact.html">Contact</a></div></div>
         <div class="name">
             Jennifer Tuten
         </div>
@@ -27,21 +27,21 @@
         <form action="contactPage" method="post">
             <div>
               <label for="yourName">Name:</label><br>
-              <input type="text" id="yourName" name="user_name">
+              <input type="text" class="yourName" name="user_name">
             </div>
             <br>
             <div>
               <label for="mail">E-mail:</label><br>
-              <input type="email" id="mail" name="user_mail">
+              <input type="email" class="mail" name="user_mail">
             </div>
             <br>
             <div>
               <label for="msg">Message:</label><br>
-              <textarea id="msg" name="user_message"></textarea>
+              <textarea class="msg" name="user_message"></textarea>
             </div>  
           </form>
           <br>
-          <button class="styled">Submit</button></p>
+          <button class="btn">Submit</button></p>
         </div>
     </main>
     <footer>
