--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="links">
-            About | Portfolio | Contact</div>
+            <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/index.html">About</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/portfolio.html">Portfolio</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/contact.html">Contact</a></div>
         <div class="name">
             Jennifer Tuten
         </div>
