--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="links">
-            About | Portfolio | Contact</div>
+                <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/index.html">About</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/portfolio.html">Portfolio</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/contact.html">Contact</a></div></div>
         <div class="name">
             Jennifer Tuten
         </div>
@@ -24,29 +24,34 @@
 
         </div>
         <div class="gallery">
-            <div class="containerItems">
-                <div class="container item-left">
-            <img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-        </div>
-            <div class="container item-right">
-            <img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-        </div>
-        <div class="container items">
-                <div class="container item-left">
-            <img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-        </div>
-            <div class="container item-right">
-            <img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-        </div>
-        <div class="container item-left">
-                <img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-            </div>
-                <div class="container item-right">
-                <img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-            </div>
-        </div>
-        </div>
-        
+                <div class="container">
+                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
+                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
+                      </div>      
+                  </div> 
+                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
+                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
+                      </div>      
+                  </div> 
+                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
+                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
+                      </div>      
+                  </div> 
+                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
+                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
+                      </div>      
+                  </div> 
+                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
+                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
+                      </div>      
+                  </div> 
+                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
+                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
+                      </div>      
+                  </div> 
+                  </div>
+                  </div>
+
     </main>
     <footer>
 
