--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,9 @@
 
     <header>
         <div class="links">
-                <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/index.html">About</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/portfolio.html">Portfolio</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/contact.html">Contact</a></div></div>
+                <a href="index.html">About</a> |
+                <a href="portfolio.html">Portfolio</a> |
+                <a href="contact.html">Contact</a></div></div>
         <div class="name">
             Jennifer Tuten
         </div>
@@ -46,10 +48,10 @@
     </main>
     <footer>
 
-        <div class="grayBar">
-
-        </div>
-    </footer>
+            <div class="bottomBorder">
+    
+            </div>
+        </footer>
 </body>
 
 </html>
