--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <header>
         <div class="links">
-            <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/index.html">About</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/portfolio.html">Portfolio</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/contact.html">Contact</a></div>
+            <a href="index.html">About</a> |
+            <a href="portfolio.html">Portfolio</a> |
+            <a href="contact.html">Contact</a>
+        </div>
         <div class="name">
             Jennifer Tuten
         </div>
@@ -28,30 +31,16 @@
 
         </div>
         <div class="bio">
-            <p>
-                Lorem ipsum dolor sit amet, pri magna petentium in, ex vis scripta similique, recteque deseruisse vis in. Vivendo efficiantur
-                instructior duo te, cu accusam scriptorem duo, libris interpretaris an nec. Eam natum mundi intellegat no,
-                id qui viderer theophrastus, mel zril interesset in. Mel omnes dolorem denique ei, eum diceret debitis no.
-                Et sanctus ceteros cum, eu vis putent ocurreret forensibus.
-            </p>
-            <p>In elit maiorum officiis eos. Dicant gubergren scripserit an pri. Ei vim omnis aliquam appareat, quo et dictas
-                molestie efficiendi. An error aeterno laoreet est, vix inani sadipscing ea. Et feugiat hendrerit quo, elit
-                conceptam et vim. Ut viris singulis consectetuer eam, eros tollit id vix. Esse assentior forensibus ne vel,
-                movet expetenda assueverit his et, assum legere complectitur ne has.</p>
-            <p>Suspendisse mattis id libero non maximus. Praesent interdum tellus elit, vitae congue neque accumsan sed. Nunc
-                ac lobortis dui. Phasellus mollis bibendum nisl, sed iaculis erat rutrum et. Vestibulum hendrerit vel arcu
-                sit amet vehicula. Quisque egestas ipsum nisl, vel ornare tellus ultricies a. Vivamus facilisis velit nisl,
-                at pharetra quam ultricies sit amet. Curabitur mattis quam nisl, vel iaculis mi posuere placerat. Sed lacinia
-                tellus at neque interdum mattis. Morbi ac diam massa. Quisque eget ex eget est dapibus cursus. Proin pulvinar,
-                lacus ac eleifend ullamcorper, diam lectus maximus velit, ut convallis sapien sem vitae diam. Etiam facilisis
-                orci a blandit porttitor. Curabitur tempus feugiat neque in suscipit. Donec sodales egestas risus ut convallis.</p>
-            <p>Donec sit amet luctus nunc, ut auctor nisi. Sed venenatis ex ipsum, sit amet molestie enim iaculis ut. Fusce
-                convallis, mauris at elementum luctus, neque arcu tristique odio, at convallis ipsum mauris id velit. Fusce
-                in nulla ut massa rutrum ullamcorper eget sit amet elit. Nullam consectetur ipsum quis fermentum porta. Maecenas
-                sed mi ac nunc dapibus porta. Aenean vitae tellus in nulla malesuada ultrices in vitae nibh. Donec aliquam
-                leo eget eros efficitur facilisis. Praesent ac semper sem. Nunc eu justo quis nibh auctor consectetur. Nam
-                eget ex non ante mattis lacinia. Mauris vitae lorem nibh. Nulla facilisi. Nunc at orci viverra, imperdiet
-                ipsum vitae, accumsan velit. In rhoncus eu mi ac mollis.</p>
+            <p>I live in the Austin area with my husband, two daughters, and our cat and dog. We've been in the area on and
+                off for about 10 years; we lived in Colorado for some time and moved back to Texas in 2017.</p>
+            <p>I'm originally from Del Rio, Texas, about 150 miles west of San Antonio. My husband and I met in high school,
+                and we married after I graduated from UTSA. Our twin girls were born in 2008, and I had the fortune of staying
+                at home with them for the first two years of their lives.</p>
+            <p>I've utilized my English degree in a few roles throughout the past 12 years. For several years I worked on freelance
+                writing projects, and I also turned my jewelry-making hobby into a business. </p>
+            <p>Currently I'm attending a 24-week web development bootcamp, and I look forward to broadening my horizons with
+                the skills I learn throughout the course. I have a couple of ideas in mind for websites and apps, and I'm
+                excited to acquire the knowledge needed to bring those ideas to life.</p>
         </div>
         </div>
     </main>
