--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,9 @@
 
     <header>
         <div class="links">
-                <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/index.html">About</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/portfolio.html">Portfolio</a> | <a href="file:///C:/Users/jenni/Desktop/Basic-Portfolio/contact.html">Contact</a></div></div>
+                <a href="index.html">About</a> |
+                <a href="portfolio.html">Portfolio</a> |
+                <a href="contact.html">Contact</a></div></div>
         <div class="name">
             Jennifer Tuten
         </div>
@@ -25,30 +27,33 @@
         </div>
         <div class="gallery">
                 <div class="container">
-                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
+                        <div class="pictures"><img src="assets/images/kids.jpg" height="192px" , width="256px">
+                            <div class="bars"><a href="http://not-double-trouble.blogspot.com/">My kids</a>
+                              </div>      
+                          </div> 
+                          <div class="pictures"><img src="assets/images/inky.jpg" height="192px" , width="256px">
+                            <div class="bars"><a href="http://flip-flops-in-the-snow.blogspot.com/">My cat</a>
+                              </div>      
+                          </div> 
+                  <div class="pictures"><img src="assets/images/charlie.jpg" height="192px" , width="256px">
+                    <div class="bars"><a href="http://flip-flops-in-the-snow.blogspot.com/">My puppy</a>
+                      </div>      
+                  </div> 
+
+                  <div class="pictures"><img src="assets/images/spurs6.jpg" height="192px" , width="256px">
+                    <div class="bars"><a href="https://www.nba.com/spurs/">San Antonio Spurs</a>
+                      </div>      
+                  </div> 
+                  <div class="pictures"><img src="assets/images/IMG_9741.jpg" height="192px" , width="256px">
                     <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
                       </div>      
                   </div> 
-                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
+                  <div class="pictures"><img src="assets/images/30before30.png" height="192px" , width="256px">
+                    <div class="bars"><a href="http://jennsthirtybeforethirty.blogspot.com/">30 before 30</a>
                       </div>      
                   </div> 
-                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
-                      </div>      
-                  </div> 
-                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
-                      </div>      
-                  </div> 
-                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
-                      </div>      
-                  </div> 
-                  <div class="pictures"><img src="assets/images/placeholder.JPG" height="192px" , width="256px">
-                    <div class="bars"><a href="https://heartbeadcreations.blogspot.com/">My jewelry blog</a>
-                      </div>      
-                  </div> 
+
+
                   </div>
                   </div>
 
