Added more images

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <div class="bio">
             <p>I live in the Austin area with my husband, two daughters, and our cat and dog. We've been in the area on and
                 off for about 10 years; we lived in Colorado for some time and moved back to Texas in 2017.</p>
-            <p>I'm originally from Del Rio, Texas, about 150 miles west of San Antonio. My husband and I met in high school,
+           <br> <p>I'm originally from Del Rio, Texas, about 150 miles west of San Antonio. My husband and I met in high school,
                 and we married after I graduated from UTSA. Our twin girls were born in 2008, and I had the fortune of staying
                 at home with them for the first two years of their lives.</p>
-            <p>I've utilized my English degree in a few roles throughout the past 12 years. For several years I worked on freelance
+           <br> <p>I've utilized my English degree in a few roles throughout the past 12 years. For several years I worked on freelance
                 writing projects, and I also turned my jewelry-making hobby into a business. </p>
-            <p>Currently I'm attending a 24-week web development bootcamp, and I look forward to broadening my horizons with
+            <br><p>Currently I'm attending a 24-week web development bootcamp, and I look forward to broadening my horizons with
                 the skills I learn throughout the course. I have a couple of ideas in mind for websites and apps, and I'm
                 excited to acquire the knowledge needed to bring those ideas to life.</p>
         </div>
